--- a/menu_list/index.html
+++ b/menu_list/index.html
@@ -7,41 +7,35 @@
 </head>
 <body>
 <ul class="level1">
-    <li>
-        Level1
-        Level1
-        Level1
-            <ul class="level2">
-                <li>
-                    Level2
-                    Level2
-                    <ul class="level3">
-                        <li>
-                            Level3
-                            Level3
-                            <ul class="level4">
-                                <li>
-                                    Level4
-                                    Level4
-                                    <ul class="level5">
-                                        <li>
-                                            Level5
-                                            Level5
-                                            Level5
-                                        </li>
-                                    </ul>
-                                    Level4
-                                </li>
-                            </ul>
-                            Level3
-                        </li>
-                    </ul>
-                    Level2
-                </li>
-            </ul>
-        Level1
-        Level1
+    <li>Level1</li>
+    <li>Level1</li>
+    <li>Level1
+        <ul class="level2">
+            <li>Level2</li>
+            <li>Level2
+                <ul class="level3">
+                    <li>Level3</li>
+                    <li>Level3</li>
+                    <li>Level3
+                        <ul class="level4">
+                            <li>Level4</li>
+                            <li>Level4
+                                <ul class="level5">
+                                    <li>Level5</li>
+                                    <li>Level5</li>
+                                    <li>Level5</li>
+                                </ul>
+                            </li>
+                            <li>Level4</li>
+                        </ul>
+                    </li>
+                </ul>
+            </li>
+            <li>Level2</li>
+        </ul>
     </li>
+    <li>Level1</li>
+    <li>Level1</li>
 </ul>
 </body>
 </html>
